# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build hello_composer {{{
config("hello_composer_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("hello_composer_public_config") {
  include_dirs = [
    "../../modules/composer/hdi_backend/include",
    "../../include/common",
    "../../modules/composer/vsync/include",
    "../../modules/render_service_base/src",
    "../../../interfaces/inner_api/composer",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]
}

ohos_executable("hello_composer") {
  install_enable = true

  sources = [
    "hello_composer.cpp",
    "layer_context.cpp",
    "main.cpp",
  ]

  configs = [ ":hello_composer_config" ]

  public_configs = [ ":hello_composer_public_config" ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "../../..:libsurface",
    "../../modules/composer:libcomposer",
    "../../../utils:sync_fence",
  ]

  external_deps = [ "eventhandler:libeventhandler" ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

## Build hello_composer }}}

