# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build hello_native_gl_triangle {{{
ohos_executable("hello_native_gl_triangle") {
  sources = [ "hello_native_gl_triangle.cpp" ]

  include_dirs = [
    "//foundation/graphic/graphic_2d/rosen/modules/2d_graphics/src",
  ]

  deps = [
    "//foundation/window/window_manager/wm:libwm",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
  ]

  public_deps = [ "//third_party/flutter/build/skia:ace_skia_ohos" ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

## Build hello_native_gl_triangle }}}
