# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")

ohos_moduletest("fence_it_test") {
  module_out_path = "graphic_standard/fence"

  sources = [ "fence_it_test.cpp" ]

  deps = [ ":fence_test_common" ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

}

group("moduletest") {
  testonly = true
  deps = [ ":fence_it_test" ]
}

config("fence_test_common_public_config") {
  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_static_library("fence_test_common") {
  visibility = [ ":*" ]
  testonly = true

  public_configs = [ ":fence_test_common_public_config" ]

  public_deps = [
    "//foundation/graphic/standard:libfence",
    "//foundation/graphic/standard:libsurface",
    "//foundation/graphic/standard/utils:test_header",
  ]
}
