# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")

ohos_moduletest("surface_it_test") {
  module_out_path = "graphic_standard/surface"

  sources = [
    "surface_it_test.cpp",
  ]

  include_dirs = [
    "//foundation/graphic/standard/frameworks/surface/include",
  ]

  deps = [
    "//foundation/graphic/standard/frameworks/surface:surface",
  ]

  external_deps = [
    "ipc:ipc_core",
  ]
}

ohos_moduletest("egl_surface_it_test") {
  module_out_path = "graphic_standard/surface"
  sources = [
    "egl_surface_it_test.cpp",
  ]

  include_dirs = [
    "//foundation/graphic/standard/frameworks/surface/include",
  ]

  deps = [
    "//foundation/graphic/standard/frameworks/wm:libwmclient",
    "//foundation/graphic/standard:libsurface",
  ]

  external_deps = [
    "ipc:ipc_core",
  ]
}

group("moduletest") {
  testonly = true
  deps = [
    ":surface_it_test",
    ":egl_surface_it_test",
  ]
}
