# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_out_path = "graphic_standard/vsync"

group("unittest") {
  testonly = true

  deps = [
    ":vsync_remote_callback_test",
    ":vsync_remote_callback_stub_test",
  ]
}

## UnitTest vsync_remote_callback_test {{{
ohos_unittest("vsync_remote_callback_test") {
  module_out_path = module_out_path

  sources = [ 
    "vsync_remote_callback_test.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_stub.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/return_value_tester.cpp",
  ]

  deps = [ ":vsync_test_common"]

}

## UnitTest vsync_remote_callback_test }}}


## UnitTest vsync_remote_callback_stub_test {{{
ohos_unittest("vsync_remote_callback_stub_test") {
  module_out_path = module_out_path

  sources = [ 
    "vsync_remote_callback_stub_test.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_stub.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/return_value_tester.cpp",
  ]

  deps = [ ":vsync_test_common"]

}

## UnitTest vsync_remote_callback_stub_test }}}

## UnitTest vsync_remote_manager_proxy_test {{{
ohos_unittest("vsync_remote_manager_proxy_test") {
  module_out_path = module_out_path

  sources = [ 
    "vsync_remote_manager_proxy_test.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_stub.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/return_value_tester.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_manager_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_manager.cpp"
  ]

  deps = [ ":vsync_test_common"]

}

## UnitTest vsync_remote_manager_proxy_test }}}

## UnitTest vsync_remote_manager_stub_test {{{
ohos_unittest("vsync_remote_manager_stub_test") {
  module_out_path = module_out_path

  sources = [ 
    "vsync_remote_manager_stub_test.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_stub.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/return_value_tester.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_manager_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_manager.cpp"
  ]

  deps = [ ":vsync_test_common"]

}

## UnitTest vsync_helper_impl_test }}}

## UnitTest vsync_helper_impl_test {{{
ohos_unittest("vsync_helper_impl_test") {
  module_out_path = module_out_path

  sources = [ 
    "vsync_helper_impl_test.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_stub.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/return_value_tester.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_manager_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_manager.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/static_call.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_helper_impl.cpp",
    
  ]

  deps = [ ":vsync_test_common"]

}

## UnitTest vsync_helper_impl_test }}}

## UnitTest vsync_module_impl_test {{{
ohos_unittest("vsync_module_impl_test") {
  module_out_path = module_out_path

  sources = [ 
    "vsync_module_impl_test.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_callback_stub.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/return_value_tester.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_manager_proxy.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_manager.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/drm_module.cpp",
    "//foundation/graphic/standard/frameworks/vsync/src/vsync_module_impl.cpp",
    
  ]

  deps = [ ":vsync_test_common"]

}

## UnitTest vsync_module_impl_test }}}


## Build vsync_test_common.a {{{
config("vsync_test_common_public_config") {
  include_dirs = [ 
    "//foundation/graphic/standard/frameworks/vsync/include",
    "//utils/system/safwk/native/include",
    "//utils/native/base/include",
    "//foundation/graphic/standard/interfaces/innerkits/vsync",
    "//foundation/graphic/standard/interfaces/innerkits/common",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_static_library("vsync_test_common") {
  testonly = true

  visibility = [ ":*" ]

  public_configs = [ ":vsync_test_common_public_config" ]

  public_deps = [
    "//utils/native/base:utils",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//third_party/googletest:gmock",
    "//third_party/libdrm:libdrm",
  ] 

}
## Build vsync_test_common.a }}}
